Fixed executable name to ImageTracker.

--- a/wxGui/CMakeLists.txt
+++ b/wxGui/CMakeLists.txt
@@ -16,8 +16,5 @@ SET (wxGui_SRCS
 	wxGui.rc
 )
 
-#ADD_EXECUTABLE(wxGui WIN32 ${wxGui_SRCS})
-#TARGET_LINK_LIBRARIES(wxGui ImageTracker ITKCommon ITKBasicFilters ITKIO ITKNumerics)
-
-ADD_EXECUTABLE(ImageViewer WIN32 wxGui_SRCS)
-TARGET_LINK_LIBRARIES(ImageViewer ImageTracker ITKCommon ITKBasicFilters ITKIO ITKNumerics)
+ADD_EXECUTABLE(ImageTracker WIN32 wxGui_SRCS)
+TARGET_LINK_LIBRARIES(ImageTracker ImageTrackerBase ITKCommon ITKBasicFilters ITKIO ITKNumerics)
