Split GUI into two projects.  Minor fixes for memory leaks.

--- a/wxGui/CMakeLists.txt
+++ b/wxGui/CMakeLists.txt
@@ -12,9 +12,21 @@ SET (wxGui_SRCS
     GlobalRegistrationDialog.cxx    GlobalRegistrationDialog.h
 	ImageCanvas.cxx                 ImageCanvas.h
 	ImageViewer.cxx                 ImageViewer.h
+	ImageWindow.cxx                 ImageWindow.h
 	RegistrationDesign_wdr.cpp      RegistrationDesign_wdr.h
 	wxGui.rc
 )
 
-ADD_EXECUTABLE(ImageTracker WIN32 wxGui_SRCS)
-TARGET_LINK_LIBRARIES(ImageTracker ImageTrackerBase ITKCommon ITKBasicFilters ITKIO ITKNumerics)
+# A library, so others can use the GUI tools
+ADD_LIBRARY(ImageTrackerGui wxGui_SRCS)
+TARGET_LINK_LIBRARIES(ImageTrackerGui ImageTrackerBase)
+
+###################################
+# The ImageTracker GUI executable.
+#
+# Note: It is *absolutely* necessary to include "WIN32" on the
+# line below.  Failing to do that does not set up a wx application
+# using the IMPLEMENT_APP() macro.
+###################################
+ADD_EXECUTABLE(ImageTracker WIN32 ImageTrackerApp.cxx)
+TARGET_LINK_LIBRARIES(ImageTracker ImageTrackerBase ImageTrackerGui)
