Changes supporting ImageTracer 2.02. Mostly surrounding multiple resolution registration, but also some updates to logging and image IO across the board.

--- a/wxGui/CMakeLists.txt
+++ b/wxGui/CMakeLists.txt
@@ -6,15 +6,19 @@
 INCLUDE( ${CMAKE_ROOT}/Modules/Use_wxWindows.cmake )
 
 SET (Gui_SRCS
-    CLGOpticFlowDialog.cxx          CLGOpticFlowDialog.h
-    DialogLogger.cxx                DialogLogger.h
-    DoubleSlider.cxx                DoubleSlider.h
-    FileSetDialog.cxx               FileSetDialog.h
-    GlobalRegistrationDialog.cxx    GlobalRegistrationDialog.h
-    HarrisFeatureDialog.cxx         HarrisFeatureDialog.h
-    ImageViewer.cxx                 ImageViewer.h
-	RegistrationDesign_wdr.cpp      RegistrationDesign_wdr.h
-	wxGui.rc
+    CLGOpticFlowDialog.cxx					CLGOpticFlowDialog.h
+    DoubleSlider.cxx						DoubleSlider.h
+    wxDoubleSlider.cxx						wxDoubleSlider.h
+    FileSetDialog.cxx						FileSetDialog.h
+    GlobalRegistrationDialog.cxx			GlobalRegistrationDialog.h
+    HarrisFeatureDialog.cxx					HarrisFeatureDialog.h
+    ImageViewer.cxx							ImageViewer.h
+    wxIntSlider.cxx							wxIntSlider.h
+    LoggerPanel.cxx							LoggerPanel.h
+    MultiResolutionRegistrationDialog.cxx	MultiResolutionRegistrationDialog.h
+    RegistrationDesign_wdr.cpp				RegistrationDesign_wdr.h
+    wxCore_wdr.cpp							wxCore_wdr.h
+    wxGui.rc
 )
 
 # A library, so others can use the GUI tools
@@ -29,5 +33,6 @@ TARGET_LINK_LIBRARIES(ITGui ITCommon ITAlgorithms vtkView )
 # Failing to do that does not set up a wx application using the 
 # IMPLEMENT_APP() macro.
 ###################################
+SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:msvcrt")
 ADD_EXECUTABLE(ImageTracker WIN32 ImageTrackerApp.cxx)
 TARGET_LINK_LIBRARIES(ImageTracker vtkView ITGui ITCommon ITAlgorithms)
